--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.65.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.30.1",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.25.76",
